# automated_news_crawler

./: README.MD  complete_news.csv  config.py  indianexpress_news.csv  main.py  moneycontrol_news.csv  newsdata_news.csv  pyproject.toml
models/: mcnews.py
utils/: api_scraper.py  scraper_utils.py
